--- a/PongGame/index.html
+++ b/PongGame/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
     </main>
-    <script src="sketch.js"></script>
+    <script src="script.js"></script>
     <script src="p5.collide2d.js"></script>
 </body>
 
